--- a/sass/base/_commons.scss
+++ b/sass/base/_commons.scss
@@ -1,19 +1,25 @@
-body{
-    font-family: 'Roboto', sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 18px;
-}
-
-.section{
-    padding: 120px 0;
-}
-
-.container{
-
+.content-container {
     width: 100%;
-    max-width: 1400px;
-    padding:0  15px;
-    margin: 0 auto;
-    border: 1px solid  tomato;
+    min-height: 320px;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-left: auto;
+    margin-right: auto;
+
+    @media screen and (min-width: 480px) {
+        width: 480px;
+    }
+    @media screen and (min-width: 768px) {
+        width: 768px;
+    }
+    @media screen and (min-width: 1280px) {
+        width: 1280px;
+    }
+}
+
+
+body {
+    font-family: 'DM Sans', sans-serif;
+    font-style: normal;
+    min-width: 320px;
 }
