--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,11 +1,12 @@
 @import "./base/commons";
 @import "./base/reset";
 @import "./base/visually-hidden";
-@import "./utils/mixim";
 @import "./utils/place-holder";
-@import "./components/footer";
 
-@import "./components/product";
+
+.test{
+    color: red;
+}
     
 
 
