--- a/css/main.css
+++ b/css/main.css
@@ -72,472 +72,7 @@ img {
   overflow: hidden;
 }
 
-.footer {
-  position: relative;
-  background-color: #FFF5F6;
-}
-
-.footer__container {
-  padding-top: 113px;
-  padding-bottom: 25px;
-}
-
-@media screen and (min-width: 768px) {
-  .footer__container {
-    padding-top: 158px;
-    padding-bottom: 18px;
-    padding-left: 36px;
-    padding-right: 36px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .footer__container {
-    padding-top: 165px;
-    padding-bottom: 10px;
-    padding-left: 114px;
-    padding-right: 121px;
-  }
-}
-
-.footer::after {
-  content: "";
-  position: absolute;
-  display: block;
-  width: 100%;
-  border: 1px solid  gray;
-  bottom: 89px;
-  left: 0;
-}
-
-@media screen and (min-width: 768px) {
-  .footer::after {
-    bottom: 73px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .footer::after {
-    bottom: 45px;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .footer__vrapper {
-    display: flex;
-    justify-content: space-between;
-  }
-}
-
-@media screen and (max-width: 767px) {
-  .footer__thumb-left {
-    margin-bottom: 43px;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .footer__thumb-left {
-    margin-bottom: 120px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .footer__thumb-left {
-    margin-bottom: 106px;
-  }
-}
-
-.footer__text {
-  font-family: Titan One;
-  text-transform: uppercase;
-  color: pink;
-  font-size: 18px;
-  line-height: calc(21 / 18);
-  margin-bottom: 17px;
-  width: 234px;
-}
-
-@media screen and (min-width: 768px) {
-  .footer__text {
-    font-size: 26px;
-    line-height: calc(30 / 26);
-    letter-spacing: 0.04em;
-    margin-bottom: 16px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .footer__text {
-    font-size: 30px;
-    line-height: calc(34 / 30);
-    letter-spacing: 0.04em;
-    margin-bottom: 15px;
-    width: 100%;
-  }
-}
-
-.footer__title-text {
-  font-family: Titan One;
-  font-size: 34px;
-  line-height: calc(39 / 34);
-  letter-spacing: 0.04em;
-  text-transform: uppercase;
+.test {
   color: red;
-  width: 200px;
-}
-
-@media screen and (min-width: 768px) {
-  .footer__title-text {
-    font-size: 48px;
-    line-height: calc(55 / 48);
-    letter-spacing: 0.06em;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .footer__title-text {
-    font-size: 58px;
-    line-height: calc(66 / 58);
-    letter-spacing: 0.06em;
-    width: 100%;
-  }
-}
-
-.footer__list-social {
-  display: flex;
-  justify-content: end;
-  margin-bottom: 46px;
-}
-
-.footer__social:not(:last-child) {
-  margin-right: 28px;
-}
-
-.social__item {
-  display: block;
-  width: 100%;
-  height: 100%;
-}
-
-.social__icon {
-  width: 34px;
-  height: 34px;
-  fill: pink;
-  transition-property: fill;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.social__icon:hover, .social__icon:focus {
-  fill: red;
-}
-
-.footer__contact_wrapper {
-  font-family: DM Sans;
-  font-weight: 700;
-  font-size: 12px;
-  line-height: calc(22 / 12);
-  text-align: right;
-}
-
-@media screen and (min-width: 768px) {
-  .footer__contact_wrapper {
-    font-size: 14px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .footer__contact_wrapper {
-    font-size: 16px;
-  }
-}
-
-.footer__coctact-text {
-  display: inline-block;
-  color: black;
-}
-
-.footer__contact {
-  display: inline-block;
-  color: red;
-}
-
-.footer__copyright {
-  font-family: DM Sans;
-  font-weight: bold;
-  letter-spacing: 0.02em;
-  color: grey;
-  font-size: 14px;
-  line-height: calc(21 / 14);
-  width: 150px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-@media screen and (min-width: 768px) {
-  .footer__copyright {
-    font-size: 14px;
-    line-height: calc(26 / 14);
-    width: 100%;
-    text-align: center;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .footer__copyright {
-    font-size: 14px;
-    line-height: calc(26 / 14);
-    width: 100%;
-    text-align: center;
-  }
-}
-
-.products-section {
-  background-color: #FFA5BA;
-}
-
-.tittle-wraper {
-  padding-top: 127px;
-}
-
-.text {
-  margin-bottom: 15px;
-  font-family: Titan One;
-  font-size: 30px;
-  line-height: calc(34 / 30);
-  text-align: center;
-  letter-spacing: 0.04em;
-  text-transform: uppercase;
-  color: #FFA5BA;
-}
-
-.tittle {
-  margin-bottom: 270px;
-  font-family: Titan One;
-  font-size: 58px;
-  line-height: 66px;
-  text-align: center;
-  letter-spacing: 0.06em;
-  text-transform: uppercase;
-  color: #D41443;
-}
-
-.product-cards-list {
-  display: flex;
-  margin-left: -10px;
-  margin-right: -10px;
-}
-
-.product-cards-list {
-  display: flex;
-  margin-left: -12px;
-  margin-right: -12px;
-}
-
-.product-card {
-  flex-basis: calc(33.33333% - 24px);
-  margin-left: 12px;
-  margin-right: 12px;
-  margin-bottom: 119px;
-  max-width: 335px;
-  position: relative;
-  padding-top: 161px;
-  padding-bottom: 50px;
-  border-radius: 24px;
-}
-
-.product-card--ice-cream {
-  background-color: #FFA5BA;
-  animation: animationHero 1000ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.product-card--ice-cream::before {
-  content: "";
-  animation: animationHero 1000ms cubic-bezier(0.4, 0, 0.2, 1);
-  position: absolute;
-  top: 0px;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 249px;
-  height: 252px;
-  background: url(/images/ice-cream-mob@1x.png);
-  background-size: contain;
-  background-repeat: no-repeat;
-}
-
-@media screen and (min-width: 768px) {
-  .product-card--ice-cream::before {
-    background: url(/images/ice-cream-tab@1x.png);
-    background-size: contain;
-    background-repeat: no-repeat;
-    width: 220px;
-    animation: animationHero 1000ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-}
-
-@media screen and (min-width: 1280px) {
-  .product-card--ice-cream::before {
-    background: url(/images/ice-cream@1x.png);
-    background-size: contain;
-    background-repeat: no-repeat;
-    width: 335px;
-    height: 335px;
-    transform: translate(-50%, -65%);
-  }
-}
-
-@media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
-  .product-card--ice-cream::before {
-    background: url(/images/ice-cream-mob@2x.png);
-    background-size: contain;
-  }
-}
-
-@media screen and (min-device-pixel-ratio: 2) and (min-width: 768px), screen and (min-resolution: 192dpi) and (min-width: 768px), screen and (min-resolution: 2dppx) and (min-width: 768px) {
-  .product-card--ice-cream::before {
-    background: url(/images/ice-cream-tab@2x.png);
-    background-size: contain;
-    background-repeat: no-repeat;
-    width: 220px;
-  }
-}
-
-@media screen and (min-device-pixel-ratio: 2) and (min-width: 1280px), screen and (min-resolution: 192dpi) and (min-width: 1280px), screen and (min-resolution: 2dppx) and (min-width: 1280px) {
-  .product-card--ice-cream::before {
-    background: url(/images/ice-cream@2x.png);
-    background-size: contain;
-    background-repeat: no-repeat;
-    width: 335px;
-    height: 335px;
-    transform: translate(-50%, -65%);
-  }
-}
-
-.product-card__description--hidden {
-  opacity: 0;
-  height: 0;
-  visibility: hidden;
-  transition: all .25s;
-}
-
-.product-card--ice-coffee {
-  background-color: #F0D1A5;
-  width: 329px;
-  border-radius: 24px;
-}
-
-.product-card--ice-coffee::before {
-  content: "";
-  background: url(/images/ice-coffee@1x.png);
-  position: absolute;
-  background-size: cover;
-  background-repeat: no-repeat;
-  top: 0px;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 329px;
-  height: 355px;
-}
-
-.product-card--milk-shake {
-  background-color: #C2E297;
-  width: 329px;
-  border-radius: 24px;
-}
-
-.product-card--milk-shake::before {
-  content: "";
-  background: url(/images/miikshakes@1x.png);
-  position: absolute;
-  background-size: cover;
-  background-repeat: no-repeat;
-  top: 0px;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 329px;
-  height: 355px;
-}
-
-.product-card__title {
-  margin-bottom: 49px;
-  font-family: Titan One;
-  margin-top: 38px;
-  font-size: 30px;
-  line-height: calc(34 / 30);
-  text-align: center;
-  letter-spacing: 0.04em;
-  text-transform: uppercase;
-  color: #FFFFFF;
-}
-
-.product-card__title::after {
-  content: "...";
-  display: block;
-  letter-spacing: 4px;
-  margin: 0;
-  padding-top: 30px;
-}
-
-p {
-  margin-bottom: 32px;
-  font-family: DM Sans;
-  font-weight: bold;
-  font-size: 16px;
-  line-height: calc(28 / 16);
-  text-align: center;
-  letter-spacing: 0.04em;
-  color: #FFFFFF;
-}
-
-.product-card__button {
-  display: block;
-  margin: auto;
-  width: 40px;
-  height: 40px;
-  cursor: pointer;
-  background-color: transparent;
-  background-image: url(/images/arrow@1x.png);
-  background-repeat: no-repeat;
-  transition: all .25s;
-}
-
-.product-card__button--opened {
-  transform: rotate(-90deg);
-}
-
-@keyframes animationHero {
-  0% {
-    opacity: 0;
-    transform: scale(0);
-  }
-  100% {
-    transform: scale(1);
-    opacity: 1;
-  }
-}
-
-.paragraf {
-  font-family: Titan One;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 78px;
-  line-height: 56px;
-  text-align: center;
-  letter-spacing: 0.06em;
-  color: #C2E297;
-  position: absolute;
-  top: 0;
-  left: 50%;
-  padding-top: 899px;
-}
-
-.img {
-  position: relative;
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/images/fon_kapli_svet_krugi_siniy_83428_1920x1080.jpg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  width: 100%;
-  height: 1280px;
 }
 /*# sourceMappingURL=main.css.map */
