--- a/css/main.css
+++ b/css/main.css
@@ -31,6 +31,90 @@ body {
   min-width: 320px;
 }
 
+.tags__btn {
+  font-size: 15px;
+  padding-right: 20px;
+}
+
+.tags {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#parent,
+#child,
+#descendant {
+  margin: 16px;
+  padding: 16px;
+  border: 4px solid #212121;
+  border-radius: 8px;
+  color: #fff;
+  font-weight: 500;
+  font-size: 20px;
+  text-transform: uppercase;
+}
+
+#parent {
+  background-color: #673ab7;
+}
+
+#child {
+  background-color: #448aff;
+}
+
+#descendant {
+  background-color: #ff9800;
+}
+
+body {
+  height: 5000vh;
+  font-family: sans-serif;
+  line-height: 1.5;
+  color: #212121;
+  background-color: #f5f5f5;
+}
+
+.cta {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+}
+
+.cta::before,
+.cta::after {
+  content: "\2193";
+  margin-left: 4px;
+  margin-right: 4px;
+}
+
+.event-counter {
+  position: sticky;
+  top: 100px;
+  display: flex;
+  justify-content: center;
+}
+
+.box {
+  display: inline-flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 12px;
+  border: 1px solid #03a9f4;
+  border-radius: 4px;
+}
+
+.event-counter p {
+  margin: 0;
+  font-size: 16px;
+}
+
+.event-counter span {
+  font-size: 48px;
+  font-family: monospace;
+}
+
 *,
 *::before,
 *::after {
@@ -51,7 +135,8 @@ button {
   border: none;
 }
 
-input, textarea {
+input,
+textarea {
   outline: none;
 }
 
@@ -73,7 +158,8 @@ img {
 }
 
 .test {
-  color: blue;
+  color: red;
+  font-size: 30px;
 }
 
 body {
